--- a/react/nextjs/package.json
+++ b/react/nextjs/package.json
@@ -11,7 +11,9 @@
   "dependencies": {
     "@heroui/react": "^2.6.14",
     "framer-motion": "^12.3.1",
+    "lucide-react": "^0.479.0",
     "next": "15.1.6",
+    "next-themes": "^0.4.5",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.4.0",
