--- a/react/nextjs/package.json
+++ b/react/nextjs/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emailjs/browser": "^4.4.1",
     "@heroui/react": "^2.6.14",
     "framer-motion": "^12.3.1",
     "lucide-react": "^0.479.0",
